objects/cscfga__Product_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Add_On_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add On</label>
        <referenceTo>cspmb__Add_On_Price_Item__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Config_ID__c</fullName>
        <label>Config ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Off_Discount_Amount__c</fullName>
        <formula>IF((cscfga__total_one_off_charge__c -  csdiscounts__One_off_non_discounted__c) &lt; 0, cscfga__total_one_off_charge__c -  csdiscounts__One_off_non_discounted__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Off Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recurring_Discount_Amount__c</fullName>
        <formula>IF ((cscfga__total_recurring_charge__c -  cscfga__recurring_charge_product_discount_value__c) &lt; 0, cscfga__total_recurring_charge__c -  cscfga__recurring_charge_product_discount_value__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recurring Discount Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <description>For document creation</description>
        <label>Shipping Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Addon_Abbreviation__c</fullName>
        <description>Custom field holding info about Addon Abbreviation.</description>
        <formula>Add_On_Id__r.UPC_Addon_Abbreviation__c</formula>
        <label>Addon Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the UPC_Address</description>
        <label>UPC Address</label>
        <referenceTo>UPC_ADBASE__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Basket_Change_Type__c</fullName>
        <formula>TEXT(cscfga__Product_Basket__r.csordtelcoa__Change_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Basket Change Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Cable_Socket_Availability__c</fullName>
        <description>Is cable socket available for this particular configuration. Have in mind that not all configuration will have cable socket as only BIFP configuration with HFC access technology have this option.</description>
        <label>Cable Socket Availability</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Undefined</fullName>
                    <default>true</default>
                    <label>Undefined</label>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Not Available</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UPC_Customer_Whishdate__c</fullName>
        <description>Customer Whishdate mapping</description>
        <inlineHelpText>Customer Whishdate mapping</inlineHelpText>
        <label>Customer Whishdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UPC_Eligible_for_Upgrade__c</fullName>
        <formula>OR(cscfga__Product_Definition__r.cscfga__IsArchived__c,
			(AND(NOT(cscfga__Product_Definition__r.cscfga__IsArchived__c), 
					cscfga__product_definition_iteration__c &lt;&gt; cscfga__Product_Definition__r.cscfga__iteration__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Process_Terms__c</fullName>
        <description>Output Mapping from attribute Process Terms.</description>
        <label>Process Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Product_Definition_Abbreviation__c</fullName>
        <description>Custom field that holds info about Product Definition Abbreviation.</description>
        <formula>cscfga__Product_Definition__r.UPC_Product_Abbreviation__c</formula>
        <label>Product Definition Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Requires_Provisioning_Taifun__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does service requires provisioning taifun.</description>
        <inlineHelpText>Does service requires provisioning taifun.</inlineHelpText>
        <label>Requires Provisioning Taifun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Site_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Id of the related Site Address record</description>
        <label>Site Address</label>
        <referenceTo>UPC_Site_Address__c</referenceTo>
        <relationshipLabel>Product Configurations (Site Address)</relationshipLabel>
        <relationshipName>Product_Configurations_Site_Address</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UPC_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the UPC_Site object</description>
        <label>Site</label>
        <referenceTo>UPC_Site__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Attribute_Name__c</fullName>
        <inlineHelpText>Name of the Attribute. It is derived from Attribute Definition‘s name based on which Attribute was created.</inlineHelpText>
        <label>Attribute Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Billing_Frequency__c</fullName>
        <inlineHelpText>Billing Frequency for Recurring Products in the Product Configuration. It can be derived from Product‘s Default Billing Frequency or with Set Billing Frequency action during configuration process.</inlineHelpText>
        <label>Line Item Billing Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Configuration_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Configuration Offer</label>
        <referenceTo>cscfga__Configuration_Offer__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Configuration_Status__c</fullName>
        <description>Describes if a configuration contains errors or not</description>
        <inlineHelpText>Status of the Product Configuration. Automatically set when Product Configuration is saved.</inlineHelpText>
        <label>Configuration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                    <default>true</default>
                    <label>Valid</label>
                </value>
                <value>
                    <fullName>Requires Update</fullName>
                </value>
                <value>
                    <fullName>Is Valid</fullName>
                </value>
                <value>
                    <fullName>Contains Errors or Incomplete</fullName>
                </value>
                <value>
                    <fullName>Contains Expired Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Contract_Term_Period_Description__c</fullName>
        <formula>case ( cscfga__Contract_Term_Period__c,
  1, &apos;Year&apos;,
  4, &apos;Quarter&apos;,
  12, &apos;Month&apos;,
  56, &apos;Week&apos;,
  365, &apos;Day&apos;,
  text(cscfga__Contract_Term_Period__c) &amp; &apos; times per year&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Description of the Contract Term Period: e.g. 6 times per year, monthly, weekly, etc.</inlineHelpText>
        <label>Contract Term Period Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Contract_Term_Period__c</fullName>
        <defaultValue>12</defaultValue>
        <description>The measure of time used by the Contract Term field.</description>
        <inlineHelpText>The measure of time used along with Contract Term to define the contract-binding period. Expressed as the number of times the period occurs in a year, for example: Annually (1), Quarterly (4), Monthly (12), Fortnightly (26) and so on.</inlineHelpText>
        <label>Contract Term Period</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Contract_Term__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Contract Term for this Product Configuration. It can be derived from Product‘s Contract Term or with Set Contract Term action during configuration process. It is a number which combined with Contract Term Period value defines the contract-binding period.</inlineHelpText>
        <label>Contract Term</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Description__c</fullName>
        <inlineHelpText>Description of the Product Configuration. Automatically set when Product Configuration is saved.</inlineHelpText>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__Entry_Date__c</fullName>
        <description>Dummy date used during the product coinfigurator to allow us to
&apos;hand roll&apos; own date picker classes (you need one &apos;real&apos; date picker
to be created by an &lt;inputField&gt; which has to be data bound to  sObject).
So this is the date we use to create our dummy hidden date picker.
All the hand-rolled ones work once this is rendered.</description>
        <inlineHelpText>Dummy input date field to enable hand-rolled date pickers to be built dynamically.</inlineHelpText>
        <label>Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cscfga__Index__c</fullName>
        <inlineHelpText>The ordinal number of Product Configuration, set automatically.</inlineHelpText>
        <label>Index</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A case sensitive unique key for this configuration. The value of this field is not guaranteed to remain constant.</description>
        <externalId>true</externalId>
        <inlineHelpText>A key used for Help Test methods.</inlineHelpText>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cscfga__Last_Screen_Index__c</fullName>
        <inlineHelpText>Index used to indicate the current screen during product configuration.</inlineHelpText>
        <label>Last Screen Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__One_Off_Charge__c</fullName>
        <inlineHelpText>Sum of non-recurring charges of all Line Items in the configuration.</inlineHelpText>
        <label>One Off Charge</label>
        <summarizedField>cscfga__Attribute__c.cscfga__Price__c</summarizedField>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Is_Line_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Recurring__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__is_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Is_rate_line_item__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>cscfga__Attribute__c.cscfga__Product_Configuration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cscfga__Parent_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the Parent Configuration.</inlineHelpText>
        <label>Parent Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Related Configurations</relationshipLabel>
        <relationshipName>Related_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of associated Product Basket.</inlineHelpText>
        <label>Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Bundle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of associated Product Bundle.</inlineHelpText>
        <label>Product Bundle</label>
        <referenceTo>cscfga__Product_Bundle__c</referenceTo>
        <relationshipLabel>Configured Products</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Definition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of Product Definition from which this Configuration was derived.</inlineHelpText>
        <label>Product Definition</label>
        <referenceTo>cscfga__Product_Definition__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Family__c</fullName>
        <description>This field will be mapped to the Product2.Family field at Opportunity sync time.
Default value is taken from Product_Definition__c.Name.</description>
        <inlineHelpText>Is used for better control over the process, enabling fine-grained forecasting capabilities. By default Product Defn name will auto-populate this field, overridden using Set Product Family action during config. Is mapped to Product2.Family fld at Opp sync</inlineHelpText>
        <label>Product Family</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>Quantity of this Product Configurations in the bundle.</inlineHelpText>
        <label>Quantity</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Recurrence_Frequency__c</fullName>
        <inlineHelpText>Recurrence Frequency for Recurring Products of the Product Configuration. It can be derived from Product‘s Default Recurrence Frequency or with Set Recurrence Frequency Action during configuration process.</inlineHelpText>
        <label>Line Item Recurrence Frequency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Recurring_Charge__c</fullName>
        <inlineHelpText>Sum of recurring charges of all Line Items in the configuration.</inlineHelpText>
        <label>Recurring Charge</label>
        <summarizedField>cscfga__Attribute__c.cscfga__Price__c</summarizedField>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Is_Line_Item__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__is_active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Recurring__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>cscfga__Attribute__c.cscfga__Is_rate_line_item__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>cscfga__Attribute__c.cscfga__Product_Configuration__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cscfga__Root_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The root configuration in the hierarchy, if any</description>
        <inlineHelpText>Name of the Parent (Root) Configuration.</inlineHelpText>
        <label>Root Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>All Descendent Configurations</relationshipLabel>
        <relationshipName>Descendent_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Screen_Flow__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used for associating a Screen Flow to the configuration. When editing Product Configuration associated Screen Flow will be displayed instead of regular Configuration Screen.</inlineHelpText>
        <label>Screen Flow</label>
        <referenceTo>cscfga__Screen_Flow__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Serial_Number__c</fullName>
        <displayFormat>PC-{00000000}</displayFormat>
        <inlineHelpText>Automatically assigned by the system.</inlineHelpText>
        <label>Serial Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cscfga__Total_Price__c</fullName>
        <description>Unit Price multiplied with Quantity.</description>
        <inlineHelpText>Unit Price multiplied with Quantity.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__Unit_Price__c</fullName>
        <description>An amount representing a single unit one-off charge summed with a year&apos;s worth of unit recurring charges. The amount is discounted by any product-level discounts defined, with the exception of time-limited discounts.</description>
        <inlineHelpText>Annualized, discounted sum of one-off and recurring charges for all line items in the configuration</inlineHelpText>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__User_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>User Session</label>
        <referenceTo>cscfga__User_Session__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Validation_Message__c</fullName>
        <inlineHelpText>Message field that should appear if Configuration Validation fails.</inlineHelpText>
        <label>Validation Message</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__charges__c</fullName>
        <description>A field containing a list of Line Item Charges serialized into JSON</description>
        <inlineHelpText>A field containing a list of Line Item Charges serialized into JSON</inlineHelpText>
        <label>Charges</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__discounts__c</fullName>
        <description>A system-controlled field containing JSON data representing the discounts for this product.</description>
        <inlineHelpText>Describes the discounts applied to the product configuration.</inlineHelpText>
        <label>Discounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__one_off_charge_line_discount_value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of the absolute values of discounts on one-off charges for product&apos;s own line item attributes</description>
        <inlineHelpText>Sum of the absolute values of discounts on one-off charges for product&apos;s own line item attributes</inlineHelpText>
        <label>One-Off Charge Line Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__one_off_charge_product_discount_value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Absolute value of the product-level discount on the one-off charge</description>
        <inlineHelpText>Absolute value of the product-level discount on the one-off charge</inlineHelpText>
        <label>One-Off Charge Product Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__originating_offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the offer from which this configuration was cloned.</description>
        <inlineHelpText>Link to the offer from which this configuration was cloned.</inlineHelpText>
        <label>Originating Offer</label>
        <referenceTo>cscfga__Configuration_Offer__c</referenceTo>
        <relationshipLabel>Configuration Offer</relationshipLabel>
        <relationshipName>Configuration_Offer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__package_guid__c</fullName>
        <description>Allows the configurations to be grouped together as an immutable group based on being cloned from the same offer.</description>
        <inlineHelpText>Allows the configurations to be grouped together as an immutable group based on being cloned from the same offer.</inlineHelpText>
        <label>Package GUID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__package_slot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If the configuration is part of a package, this lookup will link it to the slot were it is attached to</description>
        <inlineHelpText>If the configuration is part of a package, this lookup will link it to the slot were it is attached to</inlineHelpText>
        <label>Package slot</label>
        <referenceTo>cscfga__Attribute__c</referenceTo>
        <relationshipLabel>Product Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__parent_discount__c</fullName>
        <description>If ‘Inherit’, this configuration will automatically apply its parent product’s discount, if any, to itself (and therefore there cannot be a discount specific to this configuration).
Only applies to percentage discounts on the parent.
If ‘Replace’, the parent’s discount is ignored and any specified in the ‘Discounts’ field are applied.</description>
        <inlineHelpText>If ‘Inherit’, this configuration will automatically apply its parent product’s discount.
If ‘Replace’, the parent’s discount is ignored and any specified in the ‘Discounts’ field are applied.</inlineHelpText>
        <label>Parent Discount</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                    <default>true</default>
                    <label>Replace</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__pricing_status__c</fullName>
        <inlineHelpText>Displays status of the Configuration pricing</inlineHelpText>
        <label>Pricing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Requires Update</fullName>
                    <default>true</default>
                    <label>Requires Update</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__product_definition_iteration__c</fullName>
        <description>Iteration of Product Definition from which the Configuration was created.</description>
        <label>Product Definition Iteration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__product_discount__c</fullName>
        <description>Deprecated.</description>
        <inlineHelpText>Deprecated.</inlineHelpText>
        <label>__Deprecated__</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inherit</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                    <default>true</default>
                    <label>Replace</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__recurring_charge_line_discount_value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of the absolute values of discounts on recurring charges for product&apos;s own line item attributes</description>
        <inlineHelpText>Sum of the absolute values of discounts on recurring charges for product&apos;s own line item attributes</inlineHelpText>
        <label>Recurring Charge Line Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__recurring_charge_product_discount_value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Absolute value of the product-level discount on the recurring charge</description>
        <inlineHelpText>Absolute value of the product-level discount on the recurring charge</inlineHelpText>
        <label>Recurring Charge Product Discount Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__total_contract_value__c</fullName>
        <description>It has total value as one-off charge plus total recurring occurrences in whole contract term period.</description>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__total_one_off_charge__c</fullName>
        <description>One Off Charge plus sum of all Related Product Total One Off Charges</description>
        <inlineHelpText>One Off Charge plus sum of all Related Product Total One Off Charges</inlineHelpText>
        <label>Total One Off Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__total_recurring_charge__c</fullName>
        <description>Recurring Charge plus all Related Products Total Recurring Charge</description>
        <inlineHelpText>Recurring Charge plus all Related Products Total Recurring Charge</inlineHelpText>
        <label>Total Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__unit_one_off_charge__c</fullName>
        <defaultValue>0</defaultValue>
        <description>One-Off Charge of this configuration (including the One-Off Charge Product Discount) summed with Total One-Off Charges of its child related products</description>
        <inlineHelpText>One-Off Charge of this configuration (including the One-Off Charge Product Discount) summed with Total One-Off Charges of its child related products</inlineHelpText>
        <label>Unit One-Off Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__unit_recurring_charge__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Recurring Charge of this configuration (including the Recurring Charge Product Discount) summed with Total Recurring Charges of its child related products</description>
        <inlineHelpText>Recurring Charge of this configuration (including the Recurring Charge Product Discount) summed with Total Recurring Charges of its child related products</inlineHelpText>
        <label>Unit Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csdiscounts__One_off_non_discounted__c</fullName>
        <formula>cscfga__total_one_off_charge__c  +  cscfga__one_off_charge_product_discount_value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One-off non discounted</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csexpimp1__guid__c</fullName>
        <description>GUID for JSON export/import</description>
        <externalId>true</externalId>
        <inlineHelpText>GUID for JSON export/import</inlineHelpText>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>csoe__Clone_Identifier__c</fullName>
        <label>Clone Identifier</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csoe__Commercial_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Non-commercial products are linked to their parent using this field to avoid performance penalties of using related products instead.</inlineHelpText>
        <label>Commercial Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Non Commercial Configurations</relationshipLabel>
        <relationshipName>Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Config_Key__c</fullName>
        <label>Config Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Hierarchy_Level__c</fullName>
        <description>Helper field used for pre-populating the hierarchy level in hierarchical PC structures regardless of their origin. The field is used only for backend processing and should not be visible to anyone.</description>
        <label>Hierarchy Level</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Ignore_For_Order_Decomposition__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, configuration and all its child configurations are ignored during order decomposition. Otherwise product type setting on product definition is observed</description>
        <inlineHelpText>If checked, configuration and all its child configurations are ignored during order decomposition. Otherwise product type setting on product definition is observed</inlineHelpText>
        <label>Ignore For Order Decomposition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Original_Product_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Product Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Configurations (Original Product Configuration)</relationshipLabel>
        <relationshipName>Cloned_Product_Configurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Parent_Lookup_Configuraiton__c</fullName>
        <description>Helper field used for pre-populating of lookup based hierarchy parent IDs. The field is used only for backend processing and should not be visible to anyone.</description>
        <label>Parent Lookup Configuration</label>
        <length>18</length>
        <type>Text</type>
    </fields>
</CustomObject>